new linux lts branch

--- a/settings.conf
+++ b/settings.conf
@@ -1,10 +1,12 @@
-DESKTOP=
-DISK=
-DISK_PREFIX=
-BOOT_TYPE=
-USERNAME=
-PASSWORD=
-GPU_TYPE=
-HOST_NAME=
-GRUB_TITLE=
-INSTALL_TYPE=
+
+DESKTOP='--'
+DISK='/dev/nvme0n1'
+DISK_PREFIX='p'
+BOOT_TYPE='EFI'
+USERNAME='scrubs'
+PASSWORD='12345'
+GPU_TYPE='--'
+HOST_NAME='shingha'
+GRUB_TITLE='TEST'
+INSTALL_TYPE='BASIC'
+
