--- a/settings.conf
+++ b/settings.conf
@@ -1,10 +1,15 @@
 
-DESKTOP=KDE
-DISK=/dev/sda
-DISK_PREFIX=
-BOOT_TYPE=EFI
-USERNAME=scrubs
-PASSWORD=1234
-GPU_TYPE=--
-HOST_NAME=shingha
-
+	DESKTOP=
+	DISK=nvme0n1
+	DISK_PREFIX=p
+	BOOT_TYPE=EFI
+	USERNAME=
+	PASSWORD=
+	GPU_TYPE=
+	HOST_NAME=
+	TOTAL_RAM=
+	CPU_TYPE=AMD
+	DEBUG_VBOX=
+	GRUB_TITLE=
+	INSTALL_TYPE=
+	
